multiple license moderation requests can be handled - updating works fixed moderation requests in general for projects, releases, components: for edit display actual database object plus changes from own moderatino requests marked as pending or in progress if moderation request is accepted or rejected it stays on the list, but cannot be opened any more adding todos to license in database and editing whitelist of todos in database instead of replacing whole license